[package]
name = "ave"
version = "0.2.2"
authors = ["James Hiew <james@hiew.net>"]
edition = "2021"
description = "Voxel based world generation in Rust"
readme = "README.md"
homepage = "https://github.com/jameshiew/ave"
repository = "https://github.com/jameshiew/ave"
license-file = "LICENSE.txt"
keywords = ["voxel", "glsl"]

[badges]
gitlab = { repository = "https://gitlab.com/jameshiew/ave" }

[dependencies]
# OpenGL + UI
glium = "0.32"
glium_text_rusttype = { git = "https://github.com/jameshiew/glium_text_rusttype", rev = "04f484880466f4f2a46b5a1e51a253a20d7298ab" }

# math
cgmath = "0.18"
collision = { git = "https://github.com/rustgd/collision-rs", rev = "29090c42a1716d80c1a4fb12e4e1dc2d9c18580e" }
float-cmp = "0.9"
rand = "0.8"
noise = "0.7"

# instrumentation
prometheus = "0.13"

# logging
env_logger = "0.9"
log = "0.4"